fixed rotation issue of header icon and also fixed the spacing of the Movie name label and input tag

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -13,11 +13,7 @@
 
 @keyframes rotation {
     from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(359deg);
+        transform: scaleX(-1);
     }
 }
 
